@@ -19,27 +19,30 @@
  */
 package org.xwiki.test.ui;
 
-import com.deque.html.axecore.results.Results;
-import com.deque.html.axecore.results.Rule;
-import com.deque.html.axecore.selenium.AxeBuilder;
-
 import java.io.File;
 import java.io.FileWriter;
-import java.nio.charset.StandardCharsets;
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collection;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-import com.google.common.base.Functions;
-import com.google.common.collect.Ordering;
+import org.apache.commons.collections4.CollectionUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.xwiki.test.ui.po.BasePage;
+
+import com.deque.html.axecore.results.Results;
+import com.deque.html.axecore.results.Rule;
+import com.deque.html.axecore.selenium.AxeBuilder;
+import com.google.common.base.Functions;
+import com.google.common.collect.Ordering;
 
 import static java.util.Map.entry;
 
@@ -93,12 +96,9 @@ public class WCAGContext
             entry("definition-list", true),
             entry("dlitem", true),
             entry("document-title", true),
-            // Set to true once the build doesn't fail this rule anymore
-            entry("duplicate-id-active", false),
-            // Set to true once the build doesn't fail this rule anymore
-            entry("duplicate-id-aria", false),
-            // Set to true once the build doesn't fail this rule anymore
-            entry("duplicate-id", false),
+            entry("duplicate-id-active", true),
+            entry("duplicate-id-aria", true),
+            entry("duplicate-id", true),
             entry("form-field-multiple-labels", true),
             entry("frame-focusable-content", true),
             entry("frame-title-unique", true),
@@ -194,7 +194,7 @@ public class WCAGContext
                 // If the ruleid is not defined in FAILS_ON_RULE,
                 // the default behavior will be to add it to the fails.
                 // In order to resolve these test-suite fails quickly, set them as "false" in FAILS_ON_RULE.
-                .collect(Collectors.toList());
+                .toList();
             this.failCount = numberOfChecks(failingViolations);
             if (this.failCount != 0) {
                 this.failReport = AbstractXWikiCustomAxeReporter.getReadableAxeResults(testMethodName, pageClassName,
@@ -204,7 +204,7 @@ public class WCAGContext
             List<Rule> warningViolations = axeResults.getViolations()
                 .stream()
                 .filter(rule -> FAILS_ON_RULE.containsKey(rule.getId()) && !FAILS_ON_RULE.get(rule.getId()))
-                .collect(Collectors.toList());
+                .toList();
             this.warnCount = numberOfChecks(warningViolations);
             if (this.warnCount != 0) {
                 this.warnReport = AbstractXWikiCustomAxeReporter.getReadableAxeResults(testMethodName, pageClassName,
@@ -214,7 +214,7 @@ public class WCAGContext
 
         private int numberOfChecks(List<Rule> violations)
         {
-            return violations.stream().mapToInt(rule -> rule.getNodes().size()).sum();
+            return (violations == null) ? 0 : violations.stream().mapToInt(rule -> rule.getNodes().size()).sum();
         }
 
         String getFailReport()
@@ -255,6 +255,8 @@ public class WCAGContext
     private String testClassName;
 
     private String testMethodName;
+
+    private boolean stopOnError = true;
 
     /**
      * Sets the current test class name. This name is the string representation of the TestUI class in which the
@@ -341,7 +343,7 @@ public class WCAGContext
      */
     private void updateStatusCountPerRule(Map<String, Integer> statusCountPerRule, List<Rule> newChecks)
     {
-        for (Rule violation : newChecks) {
+        for (Rule violation : CollectionUtils.emptyIfNull(newChecks)) {
             String violationID = violation.getId();
             int violationCount = violation.getNodes().size();
             statusCountPerRule.put(violationID,
@@ -365,8 +367,9 @@ public class WCAGContext
         updateStatusCountPerRule(passCountPerRule, axeResults.getPasses());
         updateStatusCountPerRule(allCountPerRule,
             Stream.of(axeResults.getViolations(), axeResults.getIncomplete(), axeResults.getPasses())
-            .flatMap(x -> x.stream())
-            .collect(Collectors.toList()));
+                .filter(Objects::nonNull)
+                .flatMap(Collection::stream)
+                .collect(Collectors.toList()));
 
         if (wcagTestResults.failCount != 0) {
             LOGGER.error("[{} : {}] Found [{}] failing WCAG violations.",
@@ -445,6 +448,22 @@ public class WCAGContext
     public boolean isWCAGEnabled()
     {
         return this.wcagEnabled;
+    }
+
+    /**
+     * @param stopOnError {@code false} if WCAG validation should ignore errors, {@code true} otherwise.
+     */
+    public void setWCAGStopOnError(boolean stopOnError)
+    {
+        this.stopOnError = stopOnError;
+    }
+
+    /**
+     * @return {@code false} if WCAG validation should ignore errors, {@code true} otherwise.
+     */
+    public boolean shouldWCAGStopOnError()
+    {
+        return this.stopOnError;
     }
 
     /**
